# generative-manim

./: .gitignore  Dockerfile  README.md  docs.py  run.py
animo/: .gitignore  README.md  pyproject.toml
animo/examples/: README.md  generate_video.py  quick_generate.py  sample.py
animo/src/animo/: __init__.py  client.py
animo/src/animo/resources/: __init__.py  videos.py
api/: Dockerfile  README.md  __init__.py  app.py  openapi.yaml  requirements.txt  run.py
api/routes/: chat_generation.py  code_generation.py  video_rendering.py
