[tool.poetry]
name = "animo"
version = "0.1.2"
description = "Create animations from text using Manim"
authors = ["Marcelo <team@animo.video>"]
readme = "README.md"
packages = [{include = "animo", from = "src"}]
license = "MIT"
homepage = "https://animo.video"
repository = "https://github.com/marcelo-earth/generative-manim"
keywords = ["manim", "animation", "video", "generative"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = ">=3.9.6,<3.13"
requests = "^2.31.0"
manim = "0.18.0"
manim-physics = "0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 